Spacing Fixed

--- a/src/features/BSCode/container/bscodeContainer.module.css
+++ b/src/features/BSCode/container/bscodeContainer.module.css
@@ -1,11 +1,13 @@
 .bscode-container {
-    height: 100vh;
-    width: 100vw;
-    overflow: hidden;
+	height: 100vh;
+	width: 100vw;
+	overflow: hidden;
+	color: white;
+	background-color: black;
 }
 
 .bscode-main-area {
-    display: grid;
-    height: 93.75vh;
-    grid-template-columns: 1fr 2fr 9fr;
+	display: grid;
+	height: 93.75vh;
+	grid-template-columns: 1fr 2fr 9fr;
 }
